--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 
   </div>
 
+  <button type="button" name="button" onClick="window.location.reload();" class="btn">Play Again!</button>
+
   <script src="index.js" charset="utf-8"></script>
 </body>
 
 <footer>
-  Ritika Thareja
+  © Ritika Thareja 2021
 </footer>
 
 </html>
